news-tracker/src/styles/news/news.scss
.mainBlock {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  background: #101418;
  overflow-x: hidden;

  .newsContainer {
    display: flex;
    flex-direction: column;
    width: 400px;
    background: #14191f;
    padding: 20px;
    margin: 10px;
    border-radius: 10px;
    height: min-content;
    word-wrap: break-word;

    .newsPictureContainer {
      width: 100%;
    }

    .newsPicture {
      width: 100%;
      padding-top: 10px;
      padding-bottom: 10px;
    }

    .AuthorBlock {
      padding-top: 5px;
      padding-bottom: 10px;
      color: #f3f6f9;
    }

    .titleBlock {
      color: #f3f6f9;
    }

    .descriptionBlock {
      color: #f3f6f9;
      width: 350px;
    }

    .newsLink {
      text-decoration: none;
      color: #f3f6f9;
      height: min-content;
      padding: 0;
      margin: 0;
    }

    .sourceNamePublishedBlock {
      display: flex;
      justify-content: space-between;
      padding-bottom: 10px;
      color: #f3f6f9;
    }
  }

  .allNewsBlock {
    background: #101418;
    padding-top: 70px;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    justify-content: center;
    align-items: center;

    .pagination {
      z-index: 100;
      display: flex;
      flex-direction: row;
      justify-content: center;
      width: 700px;
      margin: 20px 0;
      align-items: center;
    }
  }

  .topHeadlinesNewsBlock {
    font-family: "Ubuntu", sans-serif;
    font-size: 15px;
    background: #101418;
    display: flex;
    min-height: 100vh;
    flex-direction: row;
    padding-top: 70px;
    justify-content: center;

    .firstBlock {
      width: 350px;
      margin-left: 90px;
      background: chartreuse;
      align-items: center;
      justify-content: space-between;
      flex-direction: column;
      height: 100%;

      .firstColumnMainNewsBlock {
        display: flex;
        width: 100%;
        background: chocolate;
        height: 300px;
        padding: 10px;
        flex-direction: column;

        .firstColumnMainNewsImg {
          display: flex;
          width: 100%;
          background: aqua;
        }

        .firstColumnMainNewsText {
          display: flex;
          width: 100%;
          background: crimson;
        }

      }

      .firstListNewsBlock {
        padding: 10px;
        height: 350px;
        display: flex;
        width: 100%;
        background: darkviolet;
        flex-direction: column;
        justify-content: space-between;

        .listImg {
          width: 150px
        }

        .firstItemBlock {
          width: 100%;
          display: flex;
          flex-direction: row;
          background: #5ee782;
        }

        .secondItemBlock {
          background: #034d27;
          width: 100%;
          display: flex;
          flex-direction: row;
        }

        .thirdItemBlock {
          background: #92e71f;
          width: 100%;
          display: flex;
          flex-direction: row;
        }
      }
    }

    .secondBlock {
      width: 600px;
      background: burlywood;
      height: 650px;
      margin-left: 20px;
      margin-right: 20px;

      .centralNewsBlock {
        display: flex;
        justify-content: space-between;
        flex-direction: column;
        background: darksalmon;
        height: 420px;
        align-items: center;
        padding: 10px;

        .centralImg {
          width: 100%;
          background: dimgray;
        }

        .centralText {
          width: 100%;
          background: indianred;
        }

        .centralNewsAuthor {
          display: flex;
          background: lightcyan;
          width: 100%;
          justify-content: end;
        }
      }

      .centralListNewsBlock {
        background: hotpink;
        display: flex;
        flex-direction: column;
        width: 100%;
        padding: 10px;
        justify-content: space-between;

        .firstCentralListItemBlock {
          display: flex;
          width: 100%;

          .firstCentralListItemImgBlock {
            display: flex;
            background: lemonchiffon;
            height: 70px;
            width: 120px;
            align-items: center;
            justify-content: center;
          }

          .firstCentralListItemTextBlock {
            display: flex;
            background: lightblue;
            width: 100%;
            align-items: center;
            justify-content: center;
          }
        }

        .secondCentralListItemBlock {
          display: flex;
          width: 100%;
          padding-top: 20px;

          .secondCentralListItemImgBlock {
            display: flex;
            background: lemonchiffon;
            height: 70px;
            width: 120px;
            align-items: center;
            justify-content: center;
          }

          .secondCentralListItemTextBlock {
            display: flex;
            background: lightblue;
            width: 100%;
            align-items: center;
            justify-content: center;
          }
        }
      }
    }

    .thirdBlock {
      width: 350px;
      background: dodgerblue;
      margin-right: 90px;
      height: 650px;

      align-items: center;
      justify-content: space-between;
      flex-direction: column;

      .thirdColumnMainNewsBlock {
        display: flex;
        width: 100%;
        background: chocolate;
        height: 300px;
        padding: 10px;
        flex-direction: column;

        .thirdColumnMainNewsImg {
          display: flex;
          width: 100%;
          background: aqua;
        }

        .thirdColumnMainNewsText {
          display: flex;
          width: 100%;
          background: crimson;
        }

      }

      .thirdListNewsBlock {
        padding: 10px;
        height: 350px;
        display: flex;
        width: 100%;
        background: darkviolet;
        flex-direction: column;
        justify-content: space-between;

        .thirdListFirstItemBlock {
          width: 100%;
          display: flex;
          flex-direction: row;
          background: #5ee782;
        }

        .thirdListSecondItemBlock {
          background: #034d27;
          width: 100%;
          display: flex;
          flex-direction: row;
        }

        .thirdListThirdItemBlock {
          background: #92e71f;
          width: 100%;
          display: flex;
          flex-direction: row;
        }
      }
    }
  }

  .masonryGrid {
    display: flex;
    flex-direction: row;
  }
}

